# parser

./: .gitignore  .gitmodules  CMakeLists.txt  config.conf  file_numbers.csv  file_numbers.txt  log.cpp  main.cpp  main.h  main_with_base.cpp  pars_db.pro  parser.cpp  parser.h  part_db.pro  structs.h  worker_cnora.cpp  worker_cnora.h  working_file.cpp
centos_cdr_build/: CMakeCache.txt  cdr_sca  cmake_install.cmake
centos_cdr_build/cnora_cpp/: cmake_install.cmake
centos_cdr_build/cnora_cpp/protocol/: DbRows.h  DbValues.c  DbValues.h  cmake_install.cmake  constr_TYPE.h
centos_cdr_build/coren_cpp/: cmake_install.cmake
centos_cdr_build/coren_cpp/protocol/: CoreNError.h  CoreNInfoCode.c  CoreNInfoResponse.h  CoreNProtocol.c  Message.c  MsgAddr.c  SetSvcName.h  SvcAnnounce.c  cmake_install.cmake
centos_cdr_build/plog/: cmake_install.cmake
cnora_cpp/: CMakeLists.txt  README.md  cmake_install.cmake
cnora_cpp/include/: CNora.h
cnora_cpp/protocol/: CMakeLists.txt  DbRequest.c  DbRequest.h  DbRow.h  cmake_install.cmake  cnora.asn1
cnora_cpp/src/: CNora.cpp  main.cpp
coren_cpp/: .gitlab-ci.yml  CMakeLists.txt  README.md  cmake_install.cmake
coren_cpp/examples/: CMakeLists.txt
coren_cpp/examples/nlohmann_json_echo_service/: CMakeLists.txt  json_echo_service.cpp
coren_cpp/examples/rapid_json_echo_service/: CMakeLists.txt  json_echo_service.cpp
coren_cpp/include/: ASN1_Service.hpp  Interface.h  JSON_Service.hpp  RJSON_Service.hpp  Service.h  Session.h  Types.h  Utils.h  VirtualService.h  asn_utils.h  logger.h
coren_cpp/protocol/: AnnounceData.c  CMakeLists.txt  CoreNError.c  CoreNInfoCode.h  CoreNInfoResponse.c  MsgAddr.h  asn_autoexpand_buffer.c  asn_autoexpand_buffer.h  cmake_install.cmake  coren.asn1
coren_cpp/src/: Interface.cpp  Service.cpp  Session.cpp  Types.cpp  Utils.cpp  VirtualService.cpp  asn_utils.cpp  logger.cpp
